flux/infrastructure/media/middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: keycloak-forwardauth
  namespace: media
spec:
  forwardAuth:
    address: http://oauth2-proxy.identity.svc.cluster.local:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - Authorization
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: sso-chain
  namespace: media
spec:
  chain:
    middlewares:
      - name: keycloak-forwardauth
        namespace: media
