flux/infrastructure/media/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    app.kubernetes.io/name: media
    app.kubernetes.io/part-of: beck-cloud
    app.kubernetes.io/managed-by: flux
