flux/infrastructure/media/homebox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  namespace: media
  labels:
    app: homebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebox
  template:
    metadata:
      labels:
        app: homebox
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-100-11
      securityContext:
        fsGroup: 1000
      containers:
        - name: homebox
          image: ghcr.io/ajnart/homebox:latest
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/data
          startupProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - nc -z localhost 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 30
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homebox-config
