flux/infrastructure/media/homebox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebox
  namespace: media
spec:
  selector:
    app: homebox
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
