flux/infrastructure/media/bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-100-11
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        runAsGroup: 1000
        supplementalGroups:
        - 1000
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:1.4.5
        resources:
          limits:
            cpu: '1'
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 256Mi
        ports:
        - containerPort: 6767
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media-movies
          mountPath: /data/movies
        - name: media-shows
          mountPath: /data/shows
        securityContext:
          capabilities:
            drop:
            - ALL
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: bazarr-config
      - name: media-movies
        persistentVolumeClaim:
          claimName: media-movies
      - name: media-shows
        persistentVolumeClaim:
          claimName: media-shows
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  selector:
    app: bazarr
  ports:
  - name: http
    port: 6767
    targetPort: 6767
    protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-bazarr-role-chain@kubernetescrd
spec:
  tls:
  - hosts:
    - bazarr.becklab.cloud
    secretName: bazarr-tls
  rules:
  - host: bazarr.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              number: 6767
