flux/infrastructure/media/homebox-ingress.yaml
apiVersion: traefik.containo.dev/v1alpha1
kind: IngressRoute
metadata:
  name: homebox
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homebox.becklab.cloud`)
      kind: Rule
      services:
        - name: homebox
          port: 3000
          scheme: https
      middlewares:
        - name: ssl-redirect
          namespace: traefik
        - name: oauth2-proxy
          namespace: identity
  tls:
    secretName: homebox-tls
