flux/infrastructure/media/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-100-11
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        runAsGroup: 1000
        supplementalGroups:
        - 1000
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin:1.11.3
        resources:
          limits:
            cpu: '8'
            memory: 8Gi
          requests:
            cpu: 1
            memory: 2Gi
        ports:
        - containerPort: 8096
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media-movies
          mountPath: /data/movies
        - name: media-shows
          mountPath: /data/shows
        - name: media-anime
          mountPath: /data/anime
        securityContext:
          capabilities:
            drop:
            - ALL
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: media-movies
        persistentVolumeClaim:
          claimName: media-movies
      - name: media-shows
        persistentVolumeClaim:
          claimName: media-shows
      - name: media-anime
        persistentVolumeClaim:
          claimName: media-anime
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 8096
    targetPort: 8096
    protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-jellyfin-role-chain@kubernetescrd
spec:
  tls:
  - hosts:
    - jellyfin.becklab.cloud
    secretName: jellyfin-tls
  rules:
  - host: jellyfin.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
