flux/infrastructure/media/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-100-11
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        runAsGroup: 1000
        supplementalGroups:
        - 1000
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:1.29.4
        resources:
          limits:
            cpu: '1'
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 256Mi
        ports:
        - containerPort: 9696
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        securityContext:
          capabilities:
            drop:
            - ALL
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: prowlarr-config
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  selector:
    app: prowlarr
  ports:
  - name: http
    port: 9696
    targetPort: 9696
    protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-prowlarr-role-chain@kubernetescrd
spec:
  tls:
  - hosts:
    - prowlarr.becklab.cloud
    secretName: prowlarr-tls
  rules:
  - host: prowlarr.becklab.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 9696
