flux/infrastructure/media/tdarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
  namespace: media
  labels:
    app: tdarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tdarr
  template:
    metadata:
      labels:
        app: tdarr
    spec:
      containers:
        - name: tdarr
          image: ghcr.io/haveagitgat/tdarr:2.5.0
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 1Gi
          ports:
            - containerPort: 8265
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-shows
              mountPath: /data/shows
            - name: media-anime
              mountPath: /data/anime
            - name: media-movies
              mountPath: /data/movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tdarr-config
        - name: media-shows
          persistentVolumeClaim:
            claimName: media-shows
        - name: media-anime
          persistentVolumeClaim:
            claimName: media-anime
        - name: media-movies
          persistentVolumeClaim:
            claimName: media-movies

---
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: media
spec:
  selector:
    app: tdarr
  ports:
    - name: http
      port: 8265
      targetPort: 8265
      protocol: TCP
  type: ClusterIP
---
#apiVersion: cert-manager.io/v1
#kind: Certificate
#metadata:
#  name: tdarr
#  namespace: media
#spec:
#  secretName: tdarr-tls
#  issuerRef:
#    name: letsencrypt-prod
#    kind: ClusterIssuer
#  dnsNames:
#    - tdarr.becklab.cloud
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-tdarr-role-chain@kubernetescrd
spec:
  tls:
    - hosts:
        - tdarr.becklab.cloud
      secretName: tdarr-tls
  rules:
    - host: tdarr.becklab.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tdarr
                port:
                  number: 8265
